fix: full-bleed green background on MS efficacy page

--- a/styles/zeposia-ms-efficacy-fixes.css
+++ b/styles/zeposia-ms-efficacy-fixes.css
@@ -18,6 +18,16 @@ main { display: block !important; }
 
 /* Fix: nested column padding in common-pgcont CTA cards */
 #common-pgcont .column-control .column-control .col {
-  padding-left: 0 !important;
-  padding-right: 0 !important;
+padding-left: 0 !important;
+padding-right: 0 !important;
+}
+
+/* Full-bleed green background - break out of main max-width */
+#greenbg {
+width: 100vw;
+position: relative;
+left: 50%;
+right: 50%;
+margin-left: -50vw;
+margin-right: -50vw;
 }
